--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página Home</h1>
+    <h1>Página inical</h1>
     <a href="Vendas.html">Ir para a página de vendas</a>
 </body>
 </html>
